--- a/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
+++ b/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
@@ -30,6 +30,12 @@
             "id": "https://bodeene.github.io/BA-9-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/transcription.json",
             "label": "Transcription"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://bodeene.github.io/BA-9-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/speaker.json",
+            "label": "Speaker"
+          }
         ],
         "items": [
           {
