--- a/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
+++ b/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
@@ -27,6 +27,12 @@
           
           {
             "type": "AnnotationPage",
+            "id": "https://bodeene.github.io/BA-9-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/environment.json",
+            "label": "Environment"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://bodeene.github.io/BA-9-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/transcription.json",
             "label": "Transcription"
           }
